--- a/SEMESTER 5/DATMIN II/Heartbeat_classification.ipynb
+++ b/SEMESTER 5/DATMIN II/Heartbeat_classification.ipynb
@@ -3648,19 +3648,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "id": "b8926663",
       "metadata": {
         "id": "b8926663"
       },
       "outputs": [],
       "source": [
-        "callback = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=3)"
+        "early_stopping = tf.keras.callbacks.EarlyStopping(\n",
+        "    monitor='val_loss',\n",
+        "    patience=5,\n",
+        "    restore_best_weights=True,\n",
+        "    verbose=1\n",
+        ")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "id": "02b97253",
       "metadata": {
         "colab": {
@@ -3742,7 +3747,7 @@
         "                  batch_size=3,\n",
         "                  epochs=30,\n",
         "                  class_weight=class_weight,\n",
-        "                  callbacks=[weight_saver, annealer],\n",
+        "                  callbacks=[weight_saver, annealer, early_stopping],\n",
         "                  validation_data=(x_val, y_val))"
       ]
     },
