--- a/SEMESTER 5/DATMIN II/Heartbeat_classification.ipynb
+++ b/SEMESTER 5/DATMIN II/Heartbeat_classification.ipynb
@@ -3655,12 +3655,7 @@
       },
       "outputs": [],
       "source": [
-        "early_stopping = tf.keras.callbacks.EarlyStopping(\n",
-        "    monitor='val_loss',\n",
-        "    patience=5,\n",
-        "    restore_best_weights=True,\n",
-        "    verbose=1\n",
-        ")"
+        "early_stop = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)"
       ]
     },
     {
@@ -3747,7 +3742,7 @@
         "                  batch_size=3,\n",
         "                  epochs=30,\n",
         "                  class_weight=class_weight,\n",
-        "                  callbacks=[weight_saver, annealer, early_stopping],\n",
+        "                  callbacks=[weight_saver, annealer, early_stop],\n",
         "                  validation_data=(x_val, y_val))"
       ]
     },
@@ -3984,6 +3979,9 @@
       "outputs": [],
       "source": [
         "# Visualisasi Confusion Matrix\n",
+        "# Pastikan nama kelas terdefinisi sebelum dipakai\n",
+        "target_names = [\"artifact\", \"murmur\", \"normal\", \"extrastole\", \"extrahls\"]\n",
+        "\n",
         "y_test_labels = y_test.argmax(axis=1)\n",
         "\n",
         "cm = confusion_matrix(y_test_labels, y_pred)\n",
@@ -4038,6 +4036,25 @@
       "source": [
         "target_names = [\"artifact\", \"murmur\", \"normal\", \"extrastole\", \"extrahls\"]\n",
         "print(classification_report(y_test.argmax(axis=1), y_pred, target_names = target_names))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "4e95111c",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Export notebook to PDF (requires TeX; if not available, export to HTML instead)\n",
+        "# Jalankan salah satu perintah di bawah sesuai lingkungan Anda.\n",
+        "\n",
+        "# Opsi 1: Ekspor ke PDF langsung (butuh LaTeX/TeX Live)\n",
+        "# !jupyter nbconvert --to pdf \"Heartbeat_classification.ipynb\" --output \"Heartbeat_classification.pdf\"\n",
+        "\n",
+        "# Opsi 2: Jika PDF gagal, ekspor ke HTML sebagai alternatif laporan\n",
+        "# !jupyter nbconvert --to html \"Heartbeat_classification.ipynb\" --output \"Heartbeat_classification.html\"\n",
+        "\n",
+        "print(\"Siap ekspor. Gunakan salah satu perintah di atas sesuai ketersediaan TeX.\")\n"
       ]
     }
   ],
